# code-hidden-assumption

./: .gitignore  CLAUDE.md  pyproject.toml
.claude/: ralph-loop.local.md
assumption-mining/: main.tex  references.bib
assumption-mining/figures/: README.md
assumption_miner/: __init__.py  baselines.py  dependency.py  extractor.py  generator.py  ingestion.py  regenerator.py  schema.py
assumption_miner/tests/: test_baselines.py  test_dependency.py  test_extractor.py  test_ingestion.py  test_rq1_offline.py  test_rq2_ablation.py  test_rq3_helpers.py  test_schema.py
data/: benchmark_mini.json  pilot_assumptions.json  rq1_results_dryrun.json  rq1_results_offline.json  rq2_ablation.json  rq2_results.json  rq3_results.json  rq3_results_dryrun.json
scripts/: collect_pilot.py  export_for_annotation.py  prepare_rq2_input.py  run_extractor.py  run_rq1.py  run_rq1_offline.py  run_rq2.py  run_rq2_ablation.py  run_rq3.py  select_benchmark_tasks.py
